# testsolidity

./: .gitmodules  Cargo.toml  Makefile  NOTICE  README.md
examples/: schema.rs
libraries/token/: Cargo.toml
libraries/token/src/: lib.rs  token_pair.rs  token_type.rs
src/: contract.rs  lib.rs  msg.rs  state.rs  token_pair.rs  token_type.rs
